--- a/js/particlesjs-config.json
+++ b/js/particlesjs-config.json
@@ -1,4 +1,4 @@
-particlesJS({
+particlesJS("particles-js",{
   "particles": {
     "number": {
       "value": 6,
@@ -107,4 +107,4 @@ particlesJS({
     }
   },
   "retina_detect": true
-})
+});
